# Meetbase

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_speakers.sql
apps/desktop/src-tauri/src/: commands.rs  db.rs  error.rs  export.rs  lib.rs  main.rs  recording.rs  settings.rs  state.rs  worker.rs
apps/desktop/src/components/: Sidebar.tsx  SpeakerChip.tsx
apps/desktop/src/lib/: api.ts  format.ts  store.ts  types.ts
apps/desktop/src/views/: LibraryView.tsx  MeetingView.tsx  RecordView.tsx  SettingsView.tsx
crates/transcribe-core/: Cargo.toml
crates/transcribe-core/src/: error.rs  lib.rs
crates/transcribe-core/src/audio/: capture.rs  chunker.rs  import.rs  mixer.rs  mod.rs  resample.rs  system_macos.rs  vad.rs
crates/transcribe-core/src/diarize/: mod.rs
crates/transcribe-core/src/llm/: mod.rs  ollama.rs  openai_compat.rs  summarize.rs
crates/transcribe-core/src/models/: mod.rs  registry.rs
crates/transcribe-core/src/transcribe/: mod.rs
crates/transcribe-core/tests/: pipeline.rs
