[package]
name = "transcribe-core"
description = "Local-first meeting transcription engine: audio capture, Whisper transcription, and LLM summarization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = []
# GPU acceleration for Whisper on Apple Silicon.
metal = ["whisper-rs/metal"]
# GPU acceleration for Whisper on NVIDIA cards (Windows/Linux).
cuda = ["whisper-rs/cuda"]
# GPU acceleration for Whisper via Vulkan (Windows AMD/Intel).
vulkan = ["whisper-rs/vulkan"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
futures-util.workspace = true
reqwest.workspace = true
chrono.workspace = true

cpal = "0.16"
ringbuf = "0.4"
rubato = "0.16"
symphonia = { version = "0.5", features = ["all"] }
whisper-rs = "0.16"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
# CoreAudio process-tap bindings for system-audio capture (macOS 14.4+).
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
hound = "3"
