[package]
name = "meetbase"
description = "Privacy-first AI meeting notetaker. Your meetings never leave your machine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "meetbase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
metal = ["transcribe-core/metal"]
cuda = ["transcribe-core/cuda"]
vulkan = ["transcribe-core/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
transcribe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[dev-dependencies]
tempfile = "3"
